--- a/app/assets/javascripts/ng/session/templates/login.html.slim
+++ b/app/assets/javascripts/ng/session/templates/login.html.slim
@@ -7,16 +7,14 @@ form.form-signin
     placeholder="Email address"
     required=""
     type="email"
-    ng-model="form.email"
-  )
+    ng-model="login_ctrl.form.email")
   label.sr-only for="inputPassword" Password
   input.form-control(
     name="password"
     placeholder="Password"
     required=""
     type="password"
-    ng-model="form.password"
-  )
+    ng-model="login_ctrl.form.password")
   button.btn.btn-lg.btn-primary.btn-block(
-    ng-click="ctrl.login()"
+    ng-click="login_ctrl.submit()"
     type="submit") Login
