--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -3,4 +3,5 @@
 @import "alertify/themes/alertify.core";
 @import "alertify/themes/alertify.bootstrap";
 @import "style";
-@import "trips/list"
+@import "trips/list";
+@import "trips/trips_filter_form";
