--- a/app/views/shared/_navbar.html.slim
+++ b/app/views/shared/_navbar.html.slim
@@ -9,17 +9,23 @@ nav.navbar.navbar-default.navbar-fixed-top
       a.navbar-brand ui-sref="home" TopTal Trips Application
     #navbar.navbar-collapse.collapse ng-cloak=""
       ul.nav.navbar-nav
-        li ng-class="{ active: ('trips' | includedByState) }" ng-if="session.isAuthenticated()"
+        li(
+          ng-class="{ active: ('trips' | includedByState) }"
+          ng-if="session.isAuthenticated()")
           a ui-sref="trips.list" Your Trips
-        li ng-class="{ active: ('admin_trips' | includedByState) }" ng-if="session.isManager() || session.isAdmin()"
-          a ui-sref="all_trips.list" All Trips
-        li ng-class="{ active: ('admin_users' | includedByState) }" ng-if="session.isAdmin()"
-          a ui-sref="users.list" Users
+        li(
+          ng-class="{ active: ('admin.trips' | includedByState) }"
+          ng-if="currentUser.isManager() || currentUser.isAdmin()")
+          a ui-sref="admin.trips.list" All Trips
+        li(
+          ng-class="{ active: ('admin.users' | includedByState) }"
+          ng-if="currentUser.isAdmin()")
+          a ui-sref="admin.users.list" Users
 
       ul.nav.navbar-nav.navbar-right
         li ng-if="!session.isAuthenticated()"
-          a ui-sref="login" Login
+          a ui-sref="session.login" Login
         li ng-if="!session.isAuthenticated()"
-          a ui-sref="registration" Sign Up
+          a ui-sref="session.registration" Sign Up
         li ng-if="session.isAuthenticated()"
           a ng-click="session.logout()" Logout
