rely on signle session object

--- a/app/assets/javascripts/ng/landing/templates/index.html.slim
+++ b/app/assets/javascripts/ng/landing/templates/index.html.slim
@@ -1,5 +1,5 @@
 .jumbotron ng-if="!user.signedIn"
-    h1 Hello comrade!
-    p To access your task list you have to sing in!
-    a.btn.btn-default ui-sref="login" Login
-    a.btn.btn-default ui-sref="registration" Sign Up
+  h1 Hello comrade!
+  p To access your task list you have to sing in!
+  a.btn.btn-default ui-sref="session.login" Login
+  a.btn.btn-default ui-sref="session.registration" Sign Up
