--- a/app/assets/javascripts/ng/admin/users/templates/new.html.slim
+++ b/app/assets/javascripts/ng/admin/users/templates/new.html.slim
@@ -1,8 +1,8 @@
-a.btn.btn-default ui-sref="trips.list" role="button" Back
+a.btn.btn-default ui-sref="admin.users.list" role="button" Back
 
-h2 New Trip
-trip-form(
-  trip="trips_ctrl.form"
-  trip-errors="trips_ctrl.errors"
-  on-submit="trips_ctrl.submit()")
+h2 New User
+admin-user-form(
+  user="users_ctrl.form"
+  user-errors="users_ctrl.errors"
+  on-submit="users_ctrl.submit()")
 
