--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -2,6 +2,7 @@
 @import "bootstrap-sass/assets/stylesheets/_bootstrap";
 @import "alertify/themes/alertify.core";
 @import "alertify/themes/alertify.bootstrap";
+@import "angular-print/angularPrint";
 @import "style";
 @import "common/list";
 @import "trips/trips_filter_form";
