--- a/app/assets/javascripts/ng/core/directives/trips_select/trips_select.html.slim
+++ b/app/assets/javascripts/ng/core/directives/trips_select/trips_select.html.slim
@@ -1,7 +1,8 @@
 .form-group
   label for="{{::name}}" ng-bind="label"
 
-  select.form-control ng-model="model"
-    option ng-repeat="(key, value) in optionsForSelect" value="{{ value }}" ng-bind="key"
+  select.form-control(
+    ng-model="model"
+    ng-options="value as key for (key, value) in optionsForSelect()")
 
   span.help-block ng-if="hasError" ng-bind="errorMessage()"
