dont allow manager to change roles

--- a/app/assets/javascripts/ng/admin/users/directives/admin_user_form/admin_user_form.html.slim
+++ b/app/assets/javascripts/ng/admin/users/directives/admin_user_form/admin_user_form.html.slim
@@ -14,6 +14,7 @@ form
     model="user.password"
     error="userErrors.password")
   trips-select(
+    ng-if="currentUser().isAdmin()"
     name="role"
     label="Role"
     model="user.role"
