--- a/app/assets/javascripts/ng/trips/directives/trip_form/trip_form.html.slim
+++ b/app/assets/javascripts/ng/trips/directives/trip_form/trip_form.html.slim
@@ -27,6 +27,21 @@ form
     type="text"
     model="trip.comment"
     error="tripErrors.comment")
+  trips-input(
+    name="latitude"
+    label="Latitude"
+    placeholder="Latitude"
+    type="number"
+    model="trip.latitude"
+    error="tripErrors.latitude")
+  trips-input(
+    name="longitude"
+    label="Longitude"
+    placeholder="Longitude"
+    type="number"
+    model="trip.longitude"
+    error="tripErrors.longitude")
+
   button.btn.btn-lg.btn-primary.btn-block(
     ng-click="onSubmit()"
     type="submit") Save
