finish solution front-end and backend

--- a/app/assets/stylesheets/common/list.scss
+++ b/app/assets/stylesheets/common/list.scss
@@ -26,4 +26,18 @@ $red: #F2DEDE;
       background: $green;
     }
   }
+
+  &_solutions {
+    .started {
+      background: $yellow;
+    }
+
+    .failed {
+      background: $red;
+    }
+
+    .completed {
+      background: $green;
+    }
+  }
 }
