--- a/app/views/shared/_navbar.html.slim
+++ b/app/views/shared/_navbar.html.slim
@@ -14,6 +14,10 @@ nav.navbar.navbar-default.navbar-fixed-top
           ng-if="session.isAuthenticated()")
           a ui-sref="trips.list" Your Trips
         li(
+          ng-class="{ active: ('solutions' | includedByState) }"
+          ng-if="session.isAuthenticated()")
+          a ui-sref="solutions.list" Your Solutions
+        li(
           ng-class="{ active: ('admin.trips' | includedByState) }"
           ng-if="session.user.isAdmin()")
           a ui-sref="admin.trips.list" All Trips
