--- a/app/assets/javascripts/ng/trips/directives/trip_form/trip_form.html.slim
+++ b/app/assets/javascripts/ng/trips/directives/trip_form/trip_form.html.slim
@@ -1,4 +1,4 @@
-form
+form name="tripForm" ng-submit="submit()"
   trips-input(
     name="destination"
     label="Destination"
@@ -14,12 +14,26 @@ form
     model="trip.start_date"
     error="tripErrors.start_date")
   trips-input(
+    name="start_time"
+    label="Start time"
+    placeholder="Start time"
+    type="time"
+    model="trip.start_time"
+    error="tripErrors.start_time")
+  trips-input(
     name="end_date"
     label="End date"
     placeholder="End date"
     type="date"
     model="trip.end_date"
     error="tripErrors.end_date")
+  trips-input(
+    name="end_time"
+    label="End time"
+    placeholder="End time"
+    type="time"
+    model="trip.end_time"
+    error="tripErrors.end_time")
   trips-input(
     name="comment"
     label="Comment"
@@ -31,6 +45,4 @@ form
   br
   br
 
-  button.btn.btn-lg.btn-primary.btn-block(
-    ng-click="onSubmit()"
-    type="submit") Save
+  button.btn.btn-lg.btn-primary.btn-block(type="submit") Save
